--- a/Mods/BreathOfTheWild_WeatherForecast/BreathOfTheWild_WeatherForecast.html
+++ b/Mods/BreathOfTheWild_WeatherForecast/BreathOfTheWild_WeatherForecast.html
@@ -44,7 +44,7 @@ function updateFromWeathersRule(intFromWeatherIndex) {
 		arrInputWeathers[1][intToWeathersIndex].options[intFromWeatherIndex].disabled=arrInputWeathers[0][intFromWeatherIndex].checked;
 	}
 }
-var arrWeathers=new Array("Blue sky","Cloudy","Rain","Heavy rain","Snow|rain","Heavy snow|rain","Dark weather","Thunder and rain","Blue sky and rain");
+var arrWeathers=new Array("Blue sky","Cloudy","Rain","Heavy rain","Snow|rain","Heavy snow|rain with thunderbolt","Dark weather","Thunder and rain","Blue sky and rain");
 </script>
 </head>
 <body>
